--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "easy-cli",
+  "name": "luyo-cli",
   "version": "0.0.1",
-  "description": "",
+  "description": "simple and easy",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "easy-cli": "./bin/index.js"
+    "luyo": "./bin/index.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["luyo"],
+  "author": "lufangyong",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.1.6",
@@ -31,5 +31,9 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lufangyong/easy-cli.git"
   }
 }
